frontend/src/styles/NavBar.module.css
.NavBar {
    background-color: #DCF4F5;
    border: 1px solid white;
}

.NavLink {
    padding: 5px;
}

#Dropdown {
    padding: 0px;
    color: #2e6980;
}

.DropdownItem {
    display: block;
    width: 100%;
    padding: 0.25rem 1.5rem;
    clear: both;
    font-weight: 400;
    color: #212529;
    text-align: inherit;
    white-space: nowrap;
    background-color: transparent;
    border: 0;
}

.DropdownItem:hover {
    background-color: #f4f4f4;
}

.Active i {
    color: #252550;
}

